--- a/package.json
+++ b/package.json
@@ -12,22 +12,30 @@
     "version": "4.2.0"
   },
   "dependencies": {
-    "hexo": "^4.0.0",
+    "hexo": "^4.2.0",
+    "hexo-asset-image": "^1.0.0",
     "hexo-browsersync": "^0.3.0",
     "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-feed": "^2.2.0",
     "hexo-generator-index": "^1.0.0",
+    "hexo-generator-seo-friendly-sitemap": "^0.0.25",
     "hexo-generator-sitemap": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-inject": "^1.0.0",
+    "hexo-math": "^3.0.4",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-jade": "^0.5.0",
+    "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-marked": "^2.0.0",
+    "hexo-renderer-mathjax": "^0.6.0",
     "hexo-renderer-pug": "^1.0.0",
     "hexo-renderer-sass": "^0.4.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-renderer-ts": "^1.2.5",
-    "hexo-server": "^1.0.0"
+    "hexo-server": "^1.0.0",
+    "hexo-site": "^0.0.0",
+    "turndown": "^6.0.0"
   }
 }
