--- a/package.json
+++ b/package.json
@@ -9,31 +9,23 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "4.2.1"
+    "version": "5.0.2"
   },
   "dependencies": {
-    "hexo": "^4.2.1",
-    "hexo-asset-image": "^1.0.0",
+    "hexo": "^5.0.0",
     "hexo-browsersync": "^0.3.0",
     "hexo-deployer-git": "^2.1.0",
+    "hexo-filter-mathjax": "^0.5.3",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
-    "hexo-generator-feed": "^2.2.0",
-    "hexo-generator-index": "^1.0.0",
-    "hexo-generator-seo-friendly-sitemap": "^0.0.25",
-    "hexo-generator-sitemap": "^2.0.0",
+    "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
-    "hexo-inject": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-jade": "^0.5.0",
-    "hexo-renderer-markdown-it-plus": "^1.0.4",
-    "hexo-renderer-mathjax": "^0.6.0",
+    "hexo-renderer-marked": "^3.0.0",
     "hexo-renderer-pug": "^1.0.0",
     "hexo-renderer-sass": "^0.4.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-renderer-ts": "^1.2.5",
-    "hexo-server": "^1.0.0",
-    "hexo-site": "^0.0.0",
-    "turndown": "^6.0.0"
+    "hexo-server": "^2.0.0"
   }
 }
