--- a/themes/arknights/package.json
+++ b/themes/arknights/package.json
@@ -7,7 +7,7 @@
     "email": "Yue_plus@foxmail.com",
     "url": "https://github.com/Yue-plus"
   },
-  "repo": {
+  "repository": {
     "type": "git",
     "url": "git+https://github.com/Yue-plus/hexo-theme-arknights.git"
   },
