--- a/_config.yml
+++ b/_config.yml
@@ -110,4 +110,6 @@ theme: arknights
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: ''
+  type: 'git'
+  repo: https://github.com/Laurenfrost/laurenfrost.github.io.git
+  branch: master
