--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -10,8 +10,8 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  # init the env of hexo
+  init:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -19,7 +19,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Repo 
-        uses: actions/checkout@hexo
+        uses: actions/checkout@master
 
       # Runs a single command using the runners shell
       - name: Setup Node.js 10.x
@@ -47,7 +47,11 @@ jobs:
         run: | 
           git config --global user.name 'Laurenfrost' 
           git config --global user.email 'Bellfahle@outlook.com'
-      
+  
+  # deploy hexo 
+  deploy:
+    runs-on: ubuntu-latest     
+    steps:
       - name: Deploy Hexo 
         run: |
           hexo clean
