--- a/.github/workflows/deploy-hexo.yml
+++ b/.github/workflows/deploy-hexo.yml
@@ -36,7 +36,7 @@ jobs:
       # 
       - name: Setup Deploy Private Key
         env:
-          HEXO_DEPLOY_PRIVATE_KEY: ${{ secretes.HEXO_DEPLOY_PRIVATE_KEY }}
+          HEXO_DEPLOY_PRIVATE_KEY: ${{ secrets.HEXO_DEPLOY_PRIVATE_KEY }}
         run: |
           mkdir -p ~/.ssh/
           echo "$HEXO_DEPLOY_PRIVATE_KEY" > ~/.ssh/id_rsa 
