--- a/.github/workflows/deploy-hexo.yml
+++ b/.github/workflows/deploy-hexo.yml
@@ -11,7 +11,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # init the env of hexo
-  init:
+  build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -48,10 +48,6 @@ jobs:
           git config --global user.name 'Laurenfrost' 
           git config --global user.email 'Bellfahle@outlook.com'
   
-  # deploy hexo 
-  deploy:
-    runs-on: ubuntu-latest     
-    steps:
       - name: Deploy Hexo 
         run: |
           hexo clean
