--- a/.github/workflows/deploy-hexo.yml
+++ b/.github/workflows/deploy-hexo.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Setup Git Infomation
         run: | 
           git config --global user.name 'Laurenfrost' 
-          git config --global user.email 'Bellfahle@outlook.com'
+          git config --global user.email 'laurenfrost@github.com'
   
       - name: Deploy Hexo 
         run: |
