--- a/_config.yml
+++ b/_config.yml
@@ -111,5 +111,5 @@ theme: arknights
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: 'git'
-  repo: https://github.com/Laurenfrost/laurenfrost.github.io.git
+  repo: https://laurenfrost@github.com/laurenfrost/laurenfrost.github.io.git
   branch: master
