--- a/.github/workflows/deploy-hexo.yml
+++ b/.github/workflows/deploy-hexo.yml
@@ -55,8 +55,8 @@ jobs:
           hexo generate 
           hexo deploy
           
-      - name: Update hexo file
-        run: |
-          git add -A
-          git commit -m "auto update by Github Action"
-          git push git@github.com:Laurenfrost/laurenfrost.github.io.git hexo:hexo
+      #- name: Update hexo file
+      #  run: |
+      #    git add -A
+      #    git commit -m "auto update by Github Action"
+      #    git push git@github.com:Laurenfrost/laurenfrost.github.io.git hexo:hexo
