--- a/themes/arknights/_config.yml
+++ b/themes/arknights/_config.yml
@@ -7,7 +7,7 @@ canvas_dust: true
 # 右侧边栏
 aside:
   logo: https://ak.hypergryph.com/assets/index/images/ak/pc/faction/1.png #图片链接，建议 1:1 比例
-  dr: /about # 侧边栏 Dr. 链接
+  dr: https://github.com/laurenfrost/ # 侧边栏 Dr. 链接
   block_in_top: false # 目前为侧边栏文章目录置顶
   copyright: # 版权声明、备案号等
     ©: 2020 to ????
