--- a/themes/arknights/package.json
+++ b/themes/arknights/package.json
@@ -1,16 +1,26 @@
 {
   "name": "hexo-theme-arknights",
-  "version": "0.0.0",
-  "description": "一个明日方舟的 Hexo 主题，正在开发中……",
-  "author": {
-    "name": "Yue_plus",
-    "email": "Yue_plus@foxmail.com",
-    "url": "https://github.com/Yue-plus"
-  },
+  "version": "1.3.4",
+  "description": "一款明日方舟罗德岛阵营的 Hexo 主题",
+  "author": "yue-plus <Yue_plus@foxmail.com> (https://github.com/Yue-plus)",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Yue-plus/hexo-theme-arknights.git"
   },
   "license": "MIT",
-  "private": true
+  "bugs": {
+    "url": "https://github.com/Yue-plus/hexo-theme-arknights/issues"
+  },
+  "homepage": "https://github.com/Yue-plus/hexo-theme-arknights#readme",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "dependencies": {
+    "hexo": "^6.0.0",
+    "hexo-browsersync": "^0.3.0",
+    "hexo-renderer-pug": "^2.0.0",
+    "hexo-server": "^2.0.0"
+  }
 }
